--- a/templates/incident/list.html.twig
+++ b/templates/incident/list.html.twig
@@ -3,16 +3,16 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Incident List</h3>
+            <h3 class="mb-0">Incidence List</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                {% for incident in incidents %}
+                {% for incidence in incidences %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <a href="{{ path('incident_show', {id: incident.id}) }}">
-                            {{ incident.description }}
+                        <a href="{{ path('incident_show', {id: incidence.id}) }}">
+                            {{ incidence.description }}
                         </a>
-                        <span class="badge badge-primary badge-pill">{{ incident.date|date('Y-m-d') }}</span>
+                        <span class="badge badge-primary badge-pill">{{ incidence.type }}</span>
                     </li>
                 {% endfor %}
             </ul>
