--- a/templates/incident/new.html.twig
+++ b/templates/incident/new.html.twig
@@ -3,27 +3,19 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> New Incident</h3>
+            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Nouvelle Incidence</h3>
         </div>
         <div class="card-body">
             {{ form_start(form) }}
-                <div class="form-group">
-                    {{ form_label(form.description) }}
-                    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Enter the description'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.date) }}
-                    {{ form_widget(form.date, {'attr': {'class': 'form-control js-datepicker'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.statut) }}
-                    {{ form_widget(form.statut, {'attr': {'class': 'form-control', 'placeholder': 'Enter the status'}}) }}
-                </div>
-                <div class="form-group">
-                    {{ form_label(form.type) }}
-                    {{ form_widget(form.type, {'attr': {'class': 'form-control', 'placeholder': 'Enter the type'}}) }}
-                </div>
-                <button class="btn btn-primary"><i class="fas fa-save"></i> Save</button>
+            <div class="form-group">
+                {{ form_label(form.type) }}
+                {{ form_widget(form.type, {'attr': {'class': 'form-control', 'placeholder': 'Entrez le type'}}) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(form.description) }}
+                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Entrez la description'}}) }}
+            </div>
+            <button class="btn btn-primary"><i class="fas fa-save"></i> Enregistrer</button>
             {{ form_end(form) }}
         </div>
     </div>
