--- a/templates/incident/show.html.twig
+++ b/templates/incident/show.html.twig
@@ -3,14 +3,12 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Incident Details</h3>
+            <h3 class="mb-0">Incidence Details</h3>
         </div>
         <div class="card-body">
-            <p><strong>Description:</strong> {{ incident.description }}</p>
-            <p><strong>Date:</strong> {{ incident.date|date('Y-m-d H:i:s') }}</p>
-            <p><strong>Statut:</strong> {{ incident.statut }}</p>
-            <p><strong>Type:</strong> {{ incident.type }}</p>
-            <a href="{{ path('incident_list') }}" class="btn btn-secondary">Back to List</a>
+            <p><strong>Type:</strong> {{ incidence.type }}</p>
+            <p><strong>Description:</strong> {{ incidence.description }}</p>
+            <a href="{{ path('incident_list') }}" class="btn btn-secondary">Révenir à la Liste</a>
         </div>
     </div>
 {% endblock %}
