Ajout de la gestion des incidents

--- a/templates/incident/list.html.twig
+++ b/templates/incident/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Incidence List</h3>
+            <h3 class="mb-0">Liste D'Incidence</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
