--- a/templates/incident/new.html.twig
+++ b/templates/incident/new.html.twig
@@ -9,11 +9,11 @@
             {{ form_start(form) }}
             <div class="form-group">
                 {{ form_label(form.type) }}
-                {{ form_widget(form.type, {'attr': {'class': 'form-control', 'placeholder': 'Entrez le type'}}) }}
+                {{ form_widget(form.type, {'attr': {'class': 'form-control', 'placeholder': 'Enter the type'}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.description) }}
-                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Entrez la description'}}) }}
+                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Enter the description'}}) }}
             </div>
             <button class="btn btn-primary"><i class="fas fa-save"></i> Enregistrer</button>
             {{ form_end(form) }}
