--- a/templates/incident/search.html.twig
+++ b/templates/incident/search.html.twig
@@ -3,14 +3,14 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Search Incidences</h3>
+            <h3 class="mb-0">Rechercher Incidences</h3>
         </div>
         <div class="card-body">
             <form method="get" action="{{ path('incident_search') }}">
                 <div class="form-group">
-                    <input type="text" name="criteria" class="form-control" placeholder="Search criteria">
+                    <input type="text" name="criteria" class="form-control" placeholder="Chercher un critère">
                 </div>
-                <button type="submit" class="btn btn-primary">Search</button>
+                <button type="submit" class="btn btn-primary">Rechercher</button>
             </form>
             <ul class="list-group mt-4">
                 {% for incidence in incidences %}
