--- a/templates/incident/new.html.twig
+++ b/templates/incident/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Nouvelle Incidence</h3>
+            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Nouvelle Incident</h3>
         </div>
         <div class="card-body">
             {{ form_start(form) }}
