--- a/templates/incident/search.html.twig
+++ b/templates/incident/search.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Rechercher Incidences</h3>
+            <h3 class="mb-0">Rechercher un incident</h3>
         </div>
         <div class="card-body">
             <form method="get" action="{{ path('incident_search') }}">
