--- a/templates/incident/show.html.twig
+++ b/templates/incident/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Details D'Incidence</h3>
+            <h3 class="mb-0">Details D'Incident</h3>
         </div>
         <div class="card-body">
             <p><strong>Type:</strong> {{ incidence.type }}</p>
