--- a/templates/incident/search.html.twig
+++ b/templates/incident/search.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Recherche Incident{% endblock %}
+
+{% block stylesheets %}{% endblock %}
+
+{% block javascripts %}{% endblock %}
+
 {% block body %}
     <div class="card mt-5 shadow-sm">
         <div class="card-header">
-            <h3 class="mb-0">Rechercher un incident</h3>
+            <h3 class="mb-0"><i class="fas fa-search"></i> Recherche Incident</h3>
         </div>
         <div class="card-body">
             <form method="get" action="{{ path('incident_search') }}">
                 <div class="form-group">
-                    <input type="text" name="criteria" class="form-control" placeholder="Chercher un critère">
+                    <input type="text" name="criteria" class="form-control" placeholder="Rechercher un critère">
                 </div>
                 <button type="submit" class="btn btn-primary">Rechercher</button>
             </form>
