--- a/templates/incident/show.html.twig
+++ b/templates/incident/show.html.twig
@@ -1,4 +1,12 @@
 {% extends 'base.html.twig' %}
+{% block title %}Details D'Incident{% endblock %}
+{% block stylesheets %}
+    <style>
+        .card {
+            border-radius: 0;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
     <div class="card mt-5 shadow-sm">
@@ -6,8 +14,8 @@
             <h3 class="mb-0">Details D'Incident</h3>
         </div>
         <div class="card-body">
-            <p><strong>Type:</strong> {{ incidence.type }}</p>
-            <p><strong>Description:</strong> {{ incidence.description }}</p>
+            <p><strong>Type :</strong> {{ incidence.type }}</p>
+            <p><strong>Description :</strong> {{ incidence.description }}</p>
             <a href="{{ path('incident_list') }}" class="btn btn-secondary">Retour à la liste</a>
         </div>
     </div>
