--- a/templates/assurance/edit.html.twig
+++ b/templates/assurance/edit.html.twig
@@ -1,13 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Assurance{% endblock %}
+{% block title %}Modier Assurance{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        .card {
+            border-radius: 0;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Assurance</h1>
-
-    {{ include('assurance/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_assurance_index') }}">back to list</a>
-
-    {{ include('assurance/_delete_form.html.twig') }}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="mb-0"><i class="fas fa-edit"></i> Modifier</h1>
+            </div>
+            <div class="card-body">
+                {{ include('assurance/_form.html.twig', {'button_label': 'Update'}) }}
+                <div class="mt-3">
+                    <a href="{{ path('app_assurance_index') }}" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i> Retour à la liste
+                    </a>
+                    {{ include('assurance/_delete_form.html.twig', { 'class': 'd-inline' }) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
