--- a/templates/assurance/index.html.twig
+++ b/templates/assurance/index.html.twig
@@ -2,40 +2,56 @@
 
 {% block title %}Assurance index{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
-    <h1>Assurance </h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>DateDebut</th>
-                <th>DateFin</th>
-                <th>Compagnie</th>
-                <th>NumPolice</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for assurance in assurances %}
-            <tr>
-                <td>{{ assurance.id }}</td>
-                <td>{{ assurance.dateDebut ? assurance.dateDebut|date('Y-m-d') : '' }}</td>
-                <td>{{ assurance.dateFin ? assurance.dateFin|date('Y-m-d') : '' }}</td>
-                <td>{{ assurance.compagnie }}</td>
-                <td>{{ assurance.numPolice }}</td>
-                <td>
-                    <a href="{{ path('app_assurance_show', {'id': assurance.id}) }}">show</a>
-                    <a href="{{ path('app_assurance_edit', {'id': assurance.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_assurance_new') }}">Create new</a>
+    <div class="container mt-5">
+        <h1 class="mb-4"><i class="fas fa-list"></i> Liste d'Assurance</h1>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Date Debut</th>
+                    <th>Date Fin</th>
+                    <th>Compagnie</th>
+                    <th>Num Police</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for assurance in assurances %}
+                    <tr>
+                        <td>{{ assurance.id }}</td>
+                        <td>{{ assurance.dateDebut ? assurance.dateDebut|date('Y-m-d') : '' }}</td>
+                        <td>{{ assurance.dateFin ? assurance.dateFin|date('Y-m-d') : '' }}</td>
+                        <td>{{ assurance.compagnie }}</td>
+                        <td>{{ assurance.numPolice }}</td>
+                        <td>
+                            <a href="{{ path('app_assurance_show', {'id': assurance.id}) }}" class="btn btn-info btn-sm">
+                                <i class="fas fa-eye"></i> Afficher
+                            </a>
+                            <a href="{{ path('app_assurance_edit', {'id': assurance.id}) }}" class="btn btn-primary btn-sm">
+                                <i class="fas fa-edit"></i> Modifier
+                            </a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="6">No records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <a href="{{ path('app_assurance_new') }}" class="btn btn-success">
+            <i class="fas fa-plus-circle"></i> Créer un nouveau
+        </a>
+    </div>
 {% endblock %}
