--- a/templates/assurance/new.html.twig
+++ b/templates/assurance/new.html.twig
@@ -34,19 +34,19 @@
             {{ form_start(form) }}
             <div class="form-group">
                 {{ form_label(form.dateDebut) }}
-                {{ form_widget(form.dateDebut, {'attr': {'class': 'form-control js-datepicker', 'placeholder': 'Enter the start date'}}) }}
+                {{ form_widget(form.dateDebut, {'attr': {'class': 'form-control js-datepicker', 'placeholder': 'Enter la date de début'}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.dateFin) }}
-                {{ form_widget(form.dateFin, {'attr': {'class': 'form-control js-datepicker', 'placeholder': 'Enter the end date'}}) }}
+                {{ form_widget(form.dateFin, {'attr': {'class': 'form-control js-datepicker', 'placeholder': 'Enter la date de fin'}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.compagnie) }}
-                {{ form_widget(form.compagnie, {'attr': {'class': 'form-control', 'placeholder': 'Enter the company name'}}) }}
+                {{ form_widget(form.compagnie, {'attr': {'class': 'form-control', 'placeholder': 'Enter le nom de la compagnie '}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.numPolice) }}
-                {{ form_widget(form.numPolice, {'attr': {'class': 'form-control', 'placeholder': 'Enter the policy number'}}) }}
+                {{ form_widget(form.numPolice, {'attr': {'class': 'form-control', 'placeholder': 'Enter le numéro de la police'}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.camion) }}
