--- a/templates/assurance/show.html.twig
+++ b/templates/assurance/show.html.twig
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Detail d'Assurance</h1>
+                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Détails Assurance</h1>
             </div>
             <div class="card-body">
                 <table class="table table-bordered">
