--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Bienvenu!{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
@@ -32,6 +32,7 @@
             margin-right: 15px;
             color: black;
             font-weight: unset;
+            font-size: 20px;
         }
         .nav-link:hover{
             border: 1px solid;
@@ -50,7 +51,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fa-scroll-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Gestion D'incident</a>
+        <a class="navbar-brand" href="#">Gestion D'Assurance</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,14 +59,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('incident_new') }}"><i class="fa fa-plus-circle"></i> Enregistrer</a>
+                    <a class="nav-link" href="{{ path('app_assurance_new') }}"><i class="fa fa-plus-circle"></i> Enregistrer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('incident_search') }}"><i class="fa fa-search"></i> Rechercher</a>
+                    <a class="nav-link" href="{{ path('app_assurance_index') }}"><i class="fa fa-table"></i> Tableau</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('incident_list') }}"><i class="fa fa-list-alt"></i> Afficher</a>
-                </li>
+
             </ul>
         </div>
     </div>
