--- a/templates/assurance/index.html.twig
+++ b/templates/assurance/index.html.twig
@@ -12,7 +12,17 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="mb-4"><i class="fas fa-table"></i> Liste d'Assurance</h1>
+        <h1 class="mb-4"><i class="fas fa-list"></i> Liste d'Assurance</h1>
+
+        <form method="get" action="{{ path('app_assurance_index') }}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="search" class="form-control" placeholder="Rechercher...">
+                <div class="input-group-append">
+                    <button class="btn btn-secondary" type="submit"><i class="fa fa-search"></i> Rechercher</button>
+                </div>
+            </div>
+        </form>
+
         <div class="table-responsive">
             <table class="table table-bordered">
                 <thead>
@@ -35,12 +45,15 @@
                         <td>{{ assurance.numPolice }}</td>
                         <td>
                             <a href="{{ path('app_assurance_show', {'id': assurance.id}) }}" class="btn btn-info btn-sm">
-                                <i class="fas fa-eye"></i> Afficher
+                                <i class="fas fa-eye"></i>
                             </a>
                             <a href="{{ path('app_assurance_edit', {'id': assurance.id}) }}" class="btn btn-primary btn-sm">
-                                <i class="fas fa-edit"></i> Modifier
+                                <i class="fas fa-edit"></i> 
                             </a>
-
+                            <form method="post" action="{{ path('app_assurance_delete', {'id': assurance.id}) }}" style="display:inline-block" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ assurance.id) }}">
+                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+                            </form>
                         </td>
                     </tr>
                 {% else %}
