--- a/templates/etiquette/new.html.twig
+++ b/templates/etiquette/new.html.twig
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Gestion de Camion | Modifier une Etiquette</title>
+    <title>Gestion de Camion | Ajout d'une Etiquette</title>
     <link rel="stylesheet" href="{{ asset('css/bootstrap-4/css/bootstrap.min.css') }}">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Modifier une Etiquette</h1>
+        <h1 class="mb-4">Ajout d'une Etiquette</h1>
         
         {{ form_start(form) }}
         
