mise à jour de l'incident !

--- a/templates/incident/list.html.twig
+++ b/templates/incident/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'incident/base.html.twig' %}
 {% block title %}Liste d'Incident{% endblock %}
 {% block stylesheets %}
     <style>
