--- a/templates/incident/index.html.twig
+++ b/templates/incident/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'incident/base.html.twig' %}
 
 {% block title %}Hello IncidentController!{% endblock %}
 
