--- a/templates/incident/show.html.twig
+++ b/templates/incident/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'incident/base.html.twig' %}
 {% block title %}Details D'Incident{% endblock %}
 {% block stylesheets %}
     <style>
