Modification de l'inspection !

--- a/templates/inspection/base.html.twig
+++ b/templates/inspection/base.html.twig
@@ -13,7 +13,7 @@
             padding-top: 70px;
         }
         .container {
-            max-width: 800px;
+            max-width: auto;
             margin: auto;
             background: white;
             padding: 20px;
@@ -58,6 +58,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_inspection_new') }}"><i class="fa fa-plus-circle"></i> Planifier</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_inspection_new') }}"><i class="fa fa-plus-circle"></i> Enregistrer</a>
                 </li>
