apres inclusion du binome26 et ajustement de la page index de videnge

--- a/templates/videnge/index.html.twig
+++ b/templates/videnge/index.html.twig
@@ -22,9 +22,7 @@
                 </div>
             </div>
         </form>
-        <a href="{{ path('app_videnge_new') }}" class="btn btn-success mb-3">
-            <i class="fas fa-plus-circle"></i> Créer un nouveau
-        </a>
+        
 
         <div class="table-responsive">
             <table class="table table-bordered">
@@ -57,12 +55,16 @@
                         </tr>
                     {% else %}
                         <tr>
-                            <td colspan="4">No records found</td>
+                            <td colspan="4">Aucun enregistrement trouvé</td>
                         </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
+        
+        <a href="{{ path('app_videnge_new') }}" class="btn btn-success mb-3">
+            <i class="fas fa-plus-circle"></i> Créer un nouveau
+        </a>
         
     </div>
 {% endblock %}
