--- a/templates/videnge/base.html.twig
+++ b/templates/videnge/base.html.twig
@@ -59,11 +59,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_videnge_new') }}"><i class="fa fa-plus-circle"></i> Nouveau Videnge</a>
+               <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Liste Videnges</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_videnge_planifier') }}"><i class="fa fa-plus-circle"></i> Planifier Videnge</a>
+                </li>
+                
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Tableau des Videnges</a>
+                    <a class="nav-link" href="{{ path('app_videnge_index') }}"><i class="fa fa-table"></i> Liste des Planing</a>
                 </li>
 
             </ul>
