--- a/templates/videnge/planifier.html.twig
+++ b/templates/videnge/planifier.html.twig
@@ -1,44 +1,43 @@
 {% extends 'videnge/base.html.twig' %}
 
-{% block title %}Nouveau Videnge{% endblock %}
+{% block title %}Planifier Videnge
+{% endblock %}
 
 {% block stylesheets %}
-    <style>
-        .card {
-            border-radius: 0;
-        }
-    </style>
+	<style>
+		.card {
+			border-radius: 0;
+		}
+	</style>
 {% endblock %}
 
 {% block javascripts %}
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            function flatpickr(s, param2) {
-
-            }
-
-            flatpickr(".js-datepicker", {
-                enableTime: true,
-                dateFormat: "Y-m-d H:i",
-            });
-        });
-    </script>
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+function flatpickr(s, param2) {}flatpickr(".js-datepicker", {
+enableTime: true,
+dateFormat: "Y-m-d H:i"
+});
+});
+	</script>
 {% endblock %}
 
 {% block body %}
-    <div class="card mt-5 shadow-sm mx-auto" style="max-width: 600px;">
-        <div class="card-header">
-            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Enregistrer Videnge</h3>
-        </div>
-        <div class="card-body">
-            {{ form_start(form) }}
-            <div class="form-group">
-                {{ form_label(form.kmVidenge) }}
-                {{ form_widget(form.kmVidenge, {'attr': {'class': 'form-control', 'placeholder': 'Entrez le kilométrage du Videnge'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.ecartType) }}
-                {{ form_widget(form.ecartType, {'attr': {'class': 'form-control', 'placeholder': 'Entrez l\'écart type'}}) }}
+<div class="card mt-5 shadow-sm mx-auto" style="max-width: 600px;">
+	<div class="card-header">
+		<h3 class="mb-0">
+			<i class="fas fa-plus-circle"></i>
+			Planifier Videnge</h3>
+	</div>
+	<div class="card-body">
+		{{ form_start(form) }}
+		<div class="form-group">
+			{{ form_label(form.kmVidenge) }}
+			{{ form_widget(form.kmVidenge, {'attr': {'class': 'form-control', 'placeholder': 'Entrez le kilométrage du Videnge'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.ecartType) }}
+			{{ form_widget(form.ecartType, {'attr': {'class': 'form-control', 'placeholder': 'Entrez l\'écart type'}}) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.camion) }}
