apres résolution des conflits et migration

--- a/templates/videnge/edit.html.twig
+++ b/templates/videnge/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'videnge/base.html.twig' %}
 
-{% block title %}Modifier Videnge{% endblock %}
+{% block title %}Modifier Vidange{% endblock %}
 
 {% block stylesheets %}
     <style>
@@ -28,7 +28,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm mx-auto" style="max-width: 600px;">
         <div class="card-header">
-            <h3 class="mb-0"><i class="fas fa-edit"></i> Modifier Videnge</h3>
+            <h3 class="mb-0"><i class="fas fa-edit"></i> Modification d'une vidange</h3>
         </div>
         <div class="card-body">
             {{ form_start(form) }}
