--- a/templates/videnge/index.html.twig
+++ b/templates/videnge/index.html.twig
@@ -16,7 +16,7 @@
 	<div class="container mt-5">
 		<h1 class="mb-4">
 			<i class="fas fa-list"></i>
-			Liste des Videnge</h1>
+			Liste des Vidange</h1>
 
 		<form method="get" action="{{ path('app_videnge_index') }}" class="mb-4">
 			<div class="input-group">
@@ -34,7 +34,7 @@
 				<thead>
 					<tr>
 						<th>ID</th>
-						<th>Kilométrage Videnge</th>
+						<th>Kilométrage Vidange</th>
 						<th>Écart Type</th>
 						<th>Statut</th>
 						<th>Actions</th>
@@ -71,7 +71,7 @@
 						</tr>
 					{% else %}
 						<tr>
-							<td colspan="4">Aucun n'Enregistrement !</td>
+							<td colspan="4">Aucun enregistrement !</td>
 						</tr>
 					{% endfor %}
 				</tbody>
