--- a/templates/videnge/new.html.twig
+++ b/templates/videnge/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'videnge/base.html.twig' %}
 
-{% block title %}Nouveau Videnge{% endblock %}
+{% block title %}Nouvelle Vidange{% endblock %}
 
 {% block stylesheets %}
     <style>
@@ -28,7 +28,7 @@
 {% block body %}
     <div class="card mt-5 shadow-sm mx-auto" style="max-width: 600px;">
         <div class="card-header">
-            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Enregistrer Videnge</h3>
+            <h3 class="mb-0"><i class="fas fa-plus-circle"></i> Enregistrer la vidange</h3>
         </div>
         <div class="card-body">
             {{ form_start(form) }}
