--- a/templates/videnge/planifier.html.twig
+++ b/templates/videnge/planifier.html.twig
@@ -1,6 +1,6 @@
 {% extends 'videnge/base.html.twig' %}
 
-{% block title %}Planifier Videnge
+{% block title %}Planifier une vidange
 {% endblock %}
 
 {% block stylesheets %}
@@ -27,7 +27,7 @@ dateFormat: "Y-m-d H:i"
 	<div class="card-header">
 		<h3 class="mb-0">
 			<i class="fas fa-plus-circle"></i>
-			Planifier Videnge</h3>
+			Planifier la vidange</h3>
 	</div>
 	<div class="card-body">
 		{{ form_start(form) }}
