--- a/templates/videnge/show.html.twig
+++ b/templates/videnge/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'videnge/base.html.twig' %}
 
-{% block title %}Détails Videnge{% endblock %}
+{% block title %}Détails Vidange{% endblock %}
 
 {% block stylesheets %}
     <style>
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header">
-                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Détails Videnge</h1>
+                <h1 class="mb-0"><i class="fas fa-info-circle"></i> Détails d'une vidange</h1>
             </div>
             <div class="card-body">
                 <table class="table table-bordered">
