Mise à jour apportée par le binome 14 et 7 en ajoutant la fonctionnalité d'impression dans l'etiquette

--- a/templates/etiquette/list.html.twig
+++ b/templates/etiquette/list.html.twig
@@ -52,6 +52,7 @@
                         <td>{{ etiquette.disponibilite ? 'Disponible' : 'Indisponible' }}</td>
                         <td>
                             <a href="{{ path('etiquette_edit', {'id': etiquette.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
+                            <a href="{{ path('etiquette_imprimer', {'id': etiquette.id}) }}" class="btn btn-primary btn-sm">Imprimer</a>
                         </td>
                     </tr>
                 {% endfor %}
