"Updated app.css with new styles, modified public/index.php to increase memory limit, and created a new Twig template for creating a new truck"

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+{# templates/truck/new.html.twig #}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+{% extends 'base.html.twig' %}
+
+{% block title %}New Truck{% endblock %}
+
+{% block body %}
+    <div class="form-container">
+        <div class="form-group">
+            <h1>Create new Truck</h1>
+
+            {{ include('truck/_form.html.twig', {'form': form}) }}
+
+            <a href="{{ path('app_truck_index') }}">back to list</a>
+        </div>
+    </div>
+{% endblock %}
