--- a/templates/videnge/index.html.twig
+++ b/templates/videnge/index.html.twig
@@ -52,9 +52,9 @@
 							<td>{{ videnge.ecartType }}</td>
 							<td>
 								{% if videnge.statut %}
-									<span class="badge badge-success">Planifié</span>
+									<span class="badge badge-success">Vidé</span>
 								{% else %}
-									<span class="badge badge-danger">Non planifié</span>
+									<span class="badge badge-danger">Non Vidé</span>
 								{% endif %}
 							</td>
 
