sidebarre et navbarre

--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 {% block title %}New Categorie{% endblock %}
 
-{% block body %}
     <h1>Create new Categorie</h1>
 
     {{ include('categorie/_form.html.twig') }}
