--- a/templates/etiquette/edit.html.twig
+++ b/templates/etiquette/edit.html.twig
@@ -1,13 +1,12 @@
 {# templates/etiquette/edit.html.twig #}
-
-<!DOCTYPE html>
-<html>
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 <head>
     <meta charset="UTF-8">
     <title>Modifier une étiquette</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
-<body>
+
     <div class="container mt-5">
         <h1 class="mb-4">Modifier une étiquette</h1>
         {{ form_start(form) }}
@@ -22,5 +21,6 @@
             <button type="submit" class="btn btn-primary">Enregistrer</button>
         {{ form_end(form) }}
     </div>
-</body>
-</html>
+
+
+{% endblock %}
