--- a/templates/piece/new.html.twig
+++ b/templates/piece/new.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}New Piece{% endblock %}
+{% block contenu %}
 
-{% block body %}
     <h1>Create new Piece</h1>
 
     {{ include('piece/_form.html.twig') }}
