--- a/templates/tracteur/new.html.twig
+++ b/templates/tracteur/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}New Tracteur{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Create new Tracteur</h1>
 
     {{ include('tracteur/_form.html.twig') }}
