--- a/templates/type_camion/edit.html.twig
+++ b/templates/type_camion/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Edit TypeCamion{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Edit TypeCamion</h1>
 
     {{ include('type_camion/_form.html.twig', {'button_label': 'Update'}) }}
