--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 {% block title %}Edit Categorie{% endblock %}
 
-{% block body %}
+
     <h1>Edit Categorie</h1>
 
     {{ include('categorie/_form.html.twig', {'button_label': 'Update'}) }}
