--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 {% block title %}Categorie index{% endblock %}
 
-{% block body %}
+
     <h1>Categorie index</h1>
 
     <table class="table">
