--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 {% block title %}Categorie{% endblock %}
 
-{% block body %}
+
     <h1>Categorie</h1>
 
     <table class="table">
