--- a/templates/grade_videnge/show.html.twig
+++ b/templates/grade_videnge/show.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 
 {% block title %}GradeVidenge{% endblock %}
 
-{% block body %}
+
     <h1>GradeVidenge</h1>
 
     <table class="table">
