--- a/templates/inspecteur/index.html.twig
+++ b/templates/inspecteur/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Inspecteur index{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Inspecteur index</h1>
 
     <table class="table">
