--- a/templates/inspecteur/new.html.twig
+++ b/templates/inspecteur/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}New Inspecteur{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Create new Inspecteur</h1>
 
     {{ include('inspecteur/_form.html.twig') }}
