--- a/templates/inspecteur/show.html.twig
+++ b/templates/inspecteur/show.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Inspecteur{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
+
     <h1>Inspecteur</h1>
 
     <table class="table">
