--- a/templates/inspection/base.html.twig
+++ b/templates/inspection/base.html.twig
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Bienvenu!{% endblock %}</title>
@@ -47,7 +47,6 @@
     </style>
     {% block stylesheets %}{% endblock %}
 </head>
-<body>
 
 <nav class="navbar navbar-expand-lg navbar-dark fa-scroll-top">
     <div class="container">
@@ -89,5 +88,5 @@
     });
 </script>
 {% block javascripts %}{% endblock %}
-</body>
-</html>
+
+{% endblock %}
