--- a/templates/list_piece/edit.html.twig
+++ b/templates/list_piece/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Edit ListPiece{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Edit ListPiece</h1>
 
     {{ include('list_piece/_form.html.twig', {'button_label': 'Update'}) }}
