--- a/templates/list_piece/index.html.twig
+++ b/templates/list_piece/index.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
+{% block contenu %}
 {% block title %}ListPiece index{% endblock %}
 
-{% block body %}
     <h1>ListPiece index</h1>
 
     <table class="table">
