--- a/templates/list_piece/show.html.twig
+++ b/templates/list_piece/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}ListPiece{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>ListPiece</h1>
 
     <table class="table">
