--- a/templates/piece/edit.html.twig
+++ b/templates/piece/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Edit Piece{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Edit Piece</h1>
 
     {{ include('piece/_form.html.twig', {'button_label': 'Update'}) }}
