--- a/templates/piece/index.html.twig
+++ b/templates/piece/index.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Piece index{% endblock %}
+{% block contenu %}
 
-{% block body %}
     <h1>Piece index</h1>
 
     <table class="table">
