--- a/templates/tracteur/edit.html.twig
+++ b/templates/tracteur/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Edit Tracteur{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Edit Tracteur</h1>
 
     {{ include('tracteur/_form.html.twig', {'button_label': 'Update'}) }}
