--- a/templates/tracteur/index.html.twig
+++ b/templates/tracteur/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Tracteur index{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Tracteur index</h1>
 
     <table class="table">
