--- a/templates/tracteur/show.html.twig
+++ b/templates/tracteur/show.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}Tracteur{% endblock %}
+{% block contenu %}
 
-{% block body %}
     <h1>Tracteur</h1>
 
     <table class="table">
