--- a/templates/type_camion/index.html.twig
+++ b/templates/type_camion/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}TypeCamion index{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>TypeCamion index</h1>
 
     <table class="table">
