--- a/templates/type_camion/new.html.twig
+++ b/templates/type_camion/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}New TypeCamion{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>Create new TypeCamion</h1>
 
     {{ include('type_camion/_form.html.twig') }}
