--- a/templates/type_camion/show.html.twig
+++ b/templates/type_camion/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'admin/base.html.twig' %}
 {% block title %}TypeCamion{% endblock %}
+{% block contenu %}
 
-{% block body %}
+
     <h1>TypeCamion</h1>
 
     <table class="table">
